--- a/py-scripts/Notebook3.ipynb
+++ b/py-scripts/Notebook3.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c07d3db0-bbe5-42dd-b473-6ff86bca00a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runs through all datasets in the source-data folder"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "c46f1603-b088-4718-82a3-5848eb15c6e5",
    "metadata": {},
@@ -333,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
