adds chances missed from February ... the edits missed when uploading all work to github

--- a/py-scripts/Notebook3.ipynb
+++ b/py-scripts/Notebook3.ipynb
@@ -12,18 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "c46f1603-b088-4718-82a3-5848eb15c6e5",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3/dist-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.17.3 and <1.25.0 is required for this version of SciPy (detected version 1.25.2\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -45,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "09c09eaf-73bb-47f3-b86f-be34a9cf3f55",
    "metadata": {},
    "outputs": [
@@ -53,136 +45,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0] marvel_partnerships.gt\n",
-      "File: ../source-data/marvel_partnerships.gt\n",
-      "\n",
-      "[1] windsurfers.gt\n",
-      "File: ../source-data/windsurfers.gt\n",
-      "\n",
-      "[2] adjnoun.gt\n",
-      "File: ../source-data/adjnoun.gt\n",
-      "\n",
-      "[3] student_cooperation.gt\n",
-      "File: ../source-data/student_cooperation.gt\n",
-      "\n",
-      "[4] game_thrones.gt\n",
-      "File: ../source-data/game_thrones.gt\n",
-      "\n",
-      "[5] blumenau_drug.gt\n",
-      "File: ../source-data/blumenau_drug.gt\n",
-      "\n",
-      "[6] celegans_metabolic.gt\n",
-      "File: ../source-data/celegans_metabolic.gt\n",
-      "\n",
-      "[7] cs_department.gt\n",
-      "File: ../source-data/cs_department.gt\n",
-      "\n",
+      "[0] ugandan_village__health-advice_8.gt\n",
+      "[1] novermber17.gt\n",
+      "[2] karate_77.gt\n",
+      "[3] euroroad.gt\n",
+      "[4] windsurfers.gt\n",
+      "[5] karate_78.gt\n",
+      "[6] facebook_friends.gt\n",
+      "[7] dolphins.gt\n",
       "[8] Deltacom.gt\n",
-      "File: ../source-data/Deltacom.gt\n",
-      "\n",
-      "[9] dolphins.gt\n",
-      "File: ../source-data/dolphins.gt\n",
-      "\n",
-      "[10] dutch_criticism.gt\n",
-      "File: ../source-data/dutch_criticism.gt\n",
-      "\n",
-      "[11] euroroad.gt\n",
-      "File: ../source-data/euroroad.gt\n",
-      "\n",
-      "[12] facebook_friends.gt\n",
-      "File: ../source-data/facebook_friends.gt\n",
-      "\n",
-      "[13] football_tsevans.gt\n",
-      "File: ../source-data/football_tsevans.gt\n",
-      "\n",
-      "[14] friendship-16.gt\n",
-      "File: ../source-data/friendship-16.gt\n",
-      "\n",
-      "[15] health-advice_8.gt\n",
-      "File: ../source-data/health-advice_8.gt\n",
-      "\n",
-      "[16] hermaphrodite_gap_junction_corrected.gt\n",
-      "File: ../source-data/hermaphrodite_gap_junction_corrected.gt\n",
-      "\n",
-      "[17] HVR_5.gt\n",
-      "File: ../source-data/HVR_5.gt\n",
-      "\n",
-      "[18] interactome_pdz.gt\n",
-      "File: ../source-data/interactome_pdz.gt\n",
-      "\n",
-      "[19] internet_top_pop__Kdl.gt\n",
-      "File: ../source-data/internet_top_pop__Kdl.gt\n",
-      "\n",
-      "[20] jazz_collab.gt\n",
-      "File: ../source-data/jazz_collab.gt\n",
-      "\n",
-      "[21] karate_77.gt\n",
-      "File: ../source-data/karate_77.gt\n",
-      "\n",
-      "[22] karate_78.gt\n",
-      "File: ../source-data/karate_78.gt\n",
-      "\n",
-      "[23] karate__78.gt\n",
-      "File: ../source-data/karate__78.gt\n",
-      "\n",
-      "[24] Kdl.gt\n",
-      "File: ../source-data/Kdl.gt\n",
-      "\n",
-      "[25] lesmis.gt\n",
-      "File: ../source-data/lesmis.gt\n",
-      "\n",
-      "[26] london_transport.gt\n",
-      "File: ../source-data/london_transport.gt\n",
-      "\n",
-      "[27] macaque_neural.gt\n",
-      "File: ../source-data/macaque_neural.gt\n",
-      "\n",
-      "[28] malaria_genes__HVR_1.gt\n",
-      "File: ../source-data/malaria_genes__HVR_1.gt\n",
-      "\n",
-      "[29] montreal.gt\n",
-      "File: ../source-data/montreal.gt\n",
-      "\n",
-      "[30] moviegalaxies_591.gt\n",
-      "File: ../source-data/moviegalaxies_591.gt\n",
-      "\n",
-      "[31] moviegalaxies__178.gt\n",
-      "File: ../source-data/moviegalaxies__178.gt\n",
-      "\n",
-      "[32] new_guinea_tribes.gt\n",
-      "File: ../source-data/new_guinea_tribes.gt\n",
-      "\n",
-      "[33] november17.gt\n",
-      "File: ../source-data/november17.gt\n",
-      "\n",
-      "[34] novermber17.gt\n",
-      "File: ../source-data/novermber17.gt\n",
-      "\n",
-      "[35] polbooks.gt\n",
-      "File: ../source-data/polbooks.gt\n",
-      "\n",
-      "[36] product_space__SITC.gt\n",
-      "File: ../source-data/product_space__SITC.gt\n",
-      "\n",
-      "[37] SITC.gt\n",
-      "File: ../source-data/SITC.gt\n",
-      "\n",
-      "[38] terrorists_911.gt\n",
-      "File: ../source-data/terrorists_911.gt\n",
-      "\n",
-      "[39] train_terrorists.gt\n",
-      "File: ../source-data/train_terrorists.gt\n",
-      "\n",
-      "[40] ugandan_village__friendship_16.gt\n",
-      "File: ../source-data/ugandan_village__friendship_16.gt\n",
-      "\n",
-      "[41] us_congress__S96.gt\n",
-      "File: ../source-data/us_congress__S96.gt\n",
-      "\n",
-      "[42] zebras.gt\n",
-      "File: ../source-data/zebras.gt\n",
-      "\n",
-      "43 files appended to RECONSTRUCTORS[0+43]\n"
+      "[9] macaque_neural.gt\n",
+      "[10] ugandan_village__friendship_16.gt\n",
+      "[11] terrorists_911.gt\n",
+      "[12] london_transport.gt\n",
+      "[13] train_terrorists.gt\n",
+      "[14] new_guinea_tribes.gt\n",
+      "[15] jazz_collab.gt\n",
+      "[16] zebras.gt\n",
+      "[17] cs_department.gt\n",
+      "[18] adjnoun.gt\n",
+      "[19] malaria_genes__HVR_1.gt\n",
+      "[20] malaria_genes__HVR_5.gt\n",
+      "[21] karate__78.gt\n",
+      "[22] interactome_pdz.gt\n",
+      "[23] internet_top_pop__Kdl.gt\n",
+      "[24] polbooks.gt\n",
+      "[25] hermaphrodite_gap_junction_corrected.gt\n",
+      "[26] moviegalaxies_591.gt\n",
+      "[27] product_space__SITC.gt\n",
+      "[28] moviegalaxies__178.gt\n",
+      "[29] blumenau_drug.gt\n",
+      "[30] montreal.gt\n",
+      "[31] november17.gt\n",
+      "[32] dutch_criticism.gt\n",
+      "[33] game_thrones.gt\n",
+      "[34] football_tsevans.gt\n",
+      "[35] marvel_partnerships.gt\n",
+      "[36] student_cooperation.gt\n",
+      "[37] lesmis.gt\n",
+      "[38] us_congress__S96.gt\n",
+      "39 files appended to RECONSTRUCTORS[0+39]\n"
      ]
     }
    ],
@@ -193,109 +95,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "5f89c949-7b6b-4db8-96bc-44977680ccaf",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SELECTED [19] : internet_top_pop__Kdl\n",
-      "Running on RECONSTRUCTORS[19]. Target 10000 (default 100) iterations.\n",
-      "--- Status of ../source-data/internet_top_pop__Kdl.gt ---\n",
-      "Current iteration: 0\n",
-      "Edges of size k: [0, 0, 847, 16]\n",
-      "Auto-stop state: [0, 0, 0, 0]\n",
-      " rw_index 0 ; stopping sum 0\n",
-      "Total runtime: 0 ns or 0.0 ms\n",
-      "Auto-stopping algorithm at 239th iteration; 4\n",
-      "Stopped\n",
-      "--- Status of ../source-data/internet_top_pop__Kdl.gt ---\n",
-      "Current iteration: 239\n",
-      "Edges of size k: [0, 0, 912, 0]\n",
-      "Auto-stop state: [0, 0, 7, -3]\n",
-      " rw_index 39 ; stopping sum 4\n",
-      "Total runtime: 988179768 ns or 988.179768 ms\n",
-      "Writing to file...\n",
-      "Data written to ../output/internet_top_pop__Kdl-20240227-1718.txt\n",
-      "Running on RECONSTRUCTORS[19]. Target 10000 (default 100) iterations.\n",
-      "Auto-stopping algorithm at 3239th iteration; -2\n",
-      "Stopped\n",
-      "--- Status of ../source-data/internet_top_pop__Kdl.gt ---\n",
-      "Current iteration: 3239\n",
-      "Edges of size k: [0, 0, 912, 0]\n",
-      "Auto-stop state: [0, 0, -2, 0]\n",
-      " rw_index 39 ; stopping sum -2\n",
-      "Total runtime: 11619554584 ns or 11619.554584 ms\n",
-      "Writing to file...\n",
-      "Data written to ../output/internet_top_pop__Kdl-20240227-1718 (2).txt\n",
-      "SELECTED [20] : jazz_collab\n",
-      "Running on RECONSTRUCTORS[20]. Target 10000 (default 100) iterations.\n",
-      "--- Status of ../source-data/jazz_collab.gt ---\n",
-      "Current iteration: 0\n",
-      "Edges of size k: [0, 0, 8, 19, 14, 44, 48, 46, 52, 147, 108, 89, 67, 42, 29, 16, 11, 2, 2, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
-      "Auto-stop state: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      " rw_index 0 ; stopping sum 0\n",
-      "Total runtime: 0 ns or 0.0 ms\n",
-      "Stopped\n",
-      "--- Status of ../source-data/jazz_collab.gt ---\n",
-      "Current iteration: 10000\n",
-      "Edges of size k: [0, 0, 5837, 38, 14, 44, 48, 46, 52, 147, 108, 89, 41, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "Auto-stop state: [0, 0, 69, -1, 0, 0, 0, 0, 0, 0, 0, 0, -2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      " rw_index 0 ; stopping sum 66\n",
-      "Total runtime: 4303291272173 ns or 4303291.272173 ms\n",
-      "Running on RECONSTRUCTORS[20]. Target 10000 (default 100) iterations.\n",
-      "Auto-stopping algorithm at 12052th iteration; 4\n",
-      "Stopped\n",
-      "--- Status of ../source-data/jazz_collab.gt ---\n",
-      "Current iteration: 12052\n",
-      "Edges of size k: [0, 0, 7365, 43, 14, 44, 48, 46, 52, 147, 29, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "Auto-stop state: [0, 0, 51, 0, 0, 0, 0, 0, 0, 0, -47, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      " rw_index 52 ; stopping sum 4\n",
-      "Total runtime: 4614861623921 ns or 4614861.623921 ms\n",
-      "Writing to file...\n",
-      "Data written to ../output/jazz_collab-20240227-1835.txt\n",
-      "Running on RECONSTRUCTORS[20]. Target 10000 (default 100) iterations.\n",
-      "Auto-stopping algorithm at 15542th iteration; 4\n",
-      "Stopped\n",
-      "--- Status of ../source-data/jazz_collab.gt ---\n",
-      "Current iteration: 15542\n",
-      "Edges of size k: [0, 0, 9966, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "Auto-stop state: [0, 0, 39, -35, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      " rw_index 42 ; stopping sum 4\n",
-      "Total runtime: 4893881668278 ns or 4893881.668278 ms\n",
-      "Writing to file...\n",
-      "Data written to ../output/jazz_collab-20240227-1840.txt\n",
-      "SELECTED [21] : karate_77\n",
-      "Running on RECONSTRUCTORS[21]. Target 10000 (default 100) iterations.\n",
-      "--- Status of ../source-data/karate_77.gt ---\n",
-      "Current iteration: 0\n",
-      "Edges of size k: [0, 0, 12, 20, 2, 2]\n",
-      "Auto-stop state: [0, 0, 0, 0, 0, 0]\n",
-      " rw_index 0 ; stopping sum 0\n",
-      "Total runtime: 0 ns or 0.0 ms\n",
-      "Auto-stopping algorithm at 352th iteration; 4\n",
-      "Stopped\n",
-      "--- Status of ../source-data/karate_77.gt ---\n",
-      "Current iteration: 352\n",
-      "Edges of size k: [0, 0, 110, 0, 0, 0]\n",
-      "Auto-stop state: [0, 0, 6, -2, 0, 0]\n",
-      " rw_index 52 ; stopping sum 4\n",
-      "Total runtime: 257380436 ns or 257.380436 ms\n",
-      "Writing to file...\n",
-      "Data written to ../output/karate_77-20240227-1840.txt\n",
-      "Running on RECONSTRUCTORS[21]. Target 10000 (default 100) iterations.\n",
-      "Auto-stopping algorithm at 3352th iteration; -2\n",
-      "Stopped\n",
-      "--- Status of ../source-data/karate_77.gt ---\n",
-      "Current iteration: 3352\n",
-      "Edges of size k: [0, 0, 112, 0, 0, 0]\n",
-      "Auto-stop state: [0, 0, -2, 0, 0, 0]\n",
-      " rw_index 52 ; stopping sum -2\n",
-      "Total runtime: 1322976901 ns or 1322.976901 ms\n",
-      "Writing to file...\n",
-      "Data written to ../output/karate_77-20240227-1840 (2).txt\n"
+     "ename": "NameError",
+     "evalue": "name 'set_current' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_10960/1471088585.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mrun_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m19\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m21\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrun_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mset_current\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0mrun_until_autostopped\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0msave_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'set_current' is not defined"
      ]
     }
    ],
@@ -343,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
