--- a/py-scripts/plotting.ipynb
+++ b/py-scripts/plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "62b1bd6e-86b6-4084-aee7-22ebe1e467e3",
    "metadata": {},
    "outputs": [],
@@ -15,12 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "955ac7ad-1600-4ec0-ad0d-fa99510b2015",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading files from ../output/\n",
+      "Loaded 1 file(s).\n"
+     ]
+    }
+   ],
    "source": [
-    "OUTPUT_LOCATION = \"../output/batch4/\"\n",
+    "OUTPUT_LOCATION = \"../output/\"\n",
     "all_files = list() # tuples of ( filename_without_path, plotting_array, plt.figure )\n",
     "\n",
     "print(f\"Loading files from {OUTPUT_LOCATION}\")\n",
@@ -35,10 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "c73927de-62cf-4f96-a4a2-6818b710ec90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotted 1 file(s).\n"
+     ]
+    }
+   ],
    "source": [
     "for (fname, plot_arr, fig) in all_files:\n",
     "    ax = fig.subplots() # default nrows=1, ncols=1\n",
@@ -77,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
