plotting.ipynb - comments and shuffling

--- a/py-scripts/plotting.ipynb
+++ b/py-scripts/plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "62b1bd6e-86b6-4084-aee7-22ebe1e467e3",
    "metadata": {},
    "outputs": [],
@@ -15,24 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "955ac7ad-1600-4ec0-ad0d-fa99510b2015",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading files from ../output/\n",
-      "Loaded 1 file(s).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "## Load files\n",
     "OUTPUT_LOCATION = \"../output/\"\n",
-    "all_files = list() # tuples of ( filename_without_path, plotting_array, plt.figure )\n",
-    "\n",
     "print(f\"Loading files from {OUTPUT_LOCATION}\")\n",
+    "\n",
+    "all_files = list() # tuples of ( filename_without_path, plotting_array, plt.figure )\n",
     "for filename in os.listdir(OUTPUT_LOCATION):\n",
     "    if fnmatch(filename, \"*(history)*.txt\"):\n",
     "        plot_arr = list()\n",
@@ -44,19 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c73927de-62cf-4f96-a4a2-6818b710ec90",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Plotted 1 file(s).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "## Plot figures and save to files\n",
     "for (fname, plot_arr, fig) in all_files:\n",
     "    ax = fig.subplots() # default nrows=1, ncols=1\n",
     "    ax.plot(plot_arr)\n",
